Bug 1647717 - Fix audio thread registration to the profiler in AudioStream.cpp. r=achronop

More or less the same as GraphDriver.cpp but simpler because there is only one
return statement.

Differential Revision: https://phabricator.services.mozilla.com/D80857